--- a/css/layout/absolute7.html
+++ b/css/layout/absolute7.html
@@ -17,38 +17,31 @@
         position: relative;
       }
       .box {
-        width: 100px;
         height: 100px;
         position: absolute;
       }
       .a {
         background: red;
-        left: 0;
-        top: 0;
+        left: 100%; /*500px*/
+        top: 100px;
       }
       .b {
         background: green;
-        right: 0;
-        top: 0;
+        right: 200px;
+        top: 100px;
       }
       .c {
         background: blue;
-        right: 0;
-        bottom: 0;
+        right: 100%;
+        top: 100px;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="box a">box A</div>
+      <div class="box a">box Aaaaaa</div>
       <div class="box b">box B</div>
       <div class="box c">box C</div>
     </div>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-      pariatur repellat non quibusdam. Commodi consectetur voluptate tenetur
-      ipsa? Mollitia ex aut fugiat illo unde laboriosam reiciendis eligendi qui
-      velit esse!
-    </p>
   </body>
 </html>
