--- a/css/layout/absolute6.html
+++ b/css/layout/absolute6.html
@@ -23,18 +23,18 @@
       }
       .a {
         background: red;
-        left: 0;
-        top: 0;
+        left: -100px;
+        top: 100px;
       }
       .b {
         background: green;
-        right: 0;
-        top: 0;
+        right: 200px;
+        top: 100px;
       }
       .c {
         background: blue;
-        right: 0;
-        bottom: 0;
+        right: -100px;
+        top: 100px;
       }
     </style>
   </head>
@@ -44,11 +44,5 @@
       <div class="box b">box B</div>
       <div class="box c">box C</div>
     </div>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-      pariatur repellat non quibusdam. Commodi consectetur voluptate tenetur
-      ipsa? Mollitia ex aut fugiat illo unde laboriosam reiciendis eligendi qui
-      velit esse!
-    </p>
   </body>
 </html>
